RESOLVED FIXED92583
Size changes on a layer with negative z-index children don't repaint correctly
https://bugs.webkit.org/show_bug.cgi?id=92583
Summary Size changes on a layer with negative z-index children don't repaint correctly
Simon Fraser (smfr)
Reported 2012-07-28 14:00:28 PDT
Created attachment 155141 [details] Testcase See testcase on a build on or later than r123971.
Attachments
Testcase (1.80 KB, text/html)
2012-07-28 14:00 PDT, Simon Fraser (smfr)
no flags
Patch (11.38 KB, patch)
2012-07-28 14:26 PDT, Simon Fraser (smfr)
dino: review+
Simon Fraser (smfr)
Comment 1 2012-07-28 14:26:25 PDT
Simon Fraser (smfr)
Comment 2 2012-07-28 14:33:08 PDT
Radar WebKit Bug Importer
Comment 3 2012-07-28 14:37:26 PDT
Simon Fraser (smfr)
Comment 4 2013-07-03 14:39:15 PDT
This seems to have regressed.
Simon Fraser (smfr)
Comment 5 2013-09-05 21:12:15 PDT
Fixed in r154470.
Note You need to log in before you can comment on or make changes to this bug.