Size changes on a layer with negative z-index children don't repaint correctly https://bugs.webkit.org/show_bug.cgi?id=92583

Reviewed by Dean Jackson.

Source/WebCore:

Negative z-index descendants cause a composited layer to have a separate
layer for foreground content. If something caused that foreground layer
to change size (like toggling visibility on a descendant), we failed to
repaint the foreground layer, resulting in stretched content.

Test: compositing/geometry/bounds-ignores-hidden-dynamic-negzindex.html

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateGraphicsLayerGeometry): Repaint the foreground
layer if its size changes, like we do for the main layer.

LayoutTests:

Test that causes a composited layer with a foreground layer (by virtue of having
negative z-index children) to resize.

Add missing pixel result for bounds-ignores-hidden-dynamic.html too.

* compositing/geometry/bounds-ignores-hidden-dynamic-expected.png: Added.
* compositing/geometry/bounds-ignores-hidden-dynamic-negzindex-expected.png: Added.
* compositing/geometry/bounds-ignores-hidden-dynamic-negzindex-expected.txt: Added.
* compositing/geometry/bounds-ignores-hidden-dynamic-negzindex.html: Added.

Canonical link: https://commits.webkit.org/110406@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123972 268f45cc-cd09-0410-ab3c-d52691b4dbfc